# pwr-opm

./: .gitignore  CMakeLists.txt  README.md  notes.md
config/: default.json
src/: Defaults.h  Generate.cpp  Main.cpp  Main.cpp.back
src/lib/: print.h
src/models/: Map.cpp  Map.h  Place.cpp  Place.h
src/optimizer/: FitnessMap.cpp  FitnessMap.h  GA.cpp  GA.h  Optimizer.cpp  Optimizer.h  Random.cpp  Random.h
src/optimizer/ga/: Crossover.cpp  Mutation.cpp  Selection.cpp
src/problem/: Problem.cpp  Problem.h  Solution.cpp  Solution.h  SolutionFitness.cpp  SolutionFitness.h
src/utils/: Config.cpp  Config.h  Stats.cpp  Stats.h
